# my-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.claude/skills/my-agent-dev/: SKILL.md
specs/: stage-0-hello-loop.md  stage-1-core-tools.md  stage-2-permissions.md  stage-3-streaming-tui.md  stage-4-context-memory.md  stage-5-subagents.md  stage-6-hooks.md  stage-7-skills.md
src/my_agent/: config.py
src/my_agent/core/: client.py  history.py  loop.py
src/my_agent/tools/: base.py  read_file.py  registry.py
tests/: conftest.py  test_stage_0_hello_loop.py
