[project]
name = "my-agent"
version = "0.0.0"
description = "Learning-oriented coding agent (Mini claude-code) — built stage by stage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.9.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
my-agent = "my_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/my_agent"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "ASYNC"]
ignore = [
    "E501",
    "RUF001",  # allow fullwidth punctuation in string literals (Chinese text)
    "RUF002",  # allow fullwidth punctuation in docstrings (Chinese comments)
    "RUF003",  # allow fullwidth punctuation in inline comments (Chinese comments)
]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
